ADDED TRANSLENT API

--- a/newscurator/public/index.html
+++ b/newscurator/public/index.html
@@ -9,7 +9,8 @@
       name="description"
       content="Web site created using create-react-app"
     />
-
+    <script src="https://static.elfsight.com/platform/platform.js" async></script>
+    
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3533821773667516"
     crossorigin="anonymous"></script>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
@@ -34,6 +35,7 @@
     
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <div class="elfsight-app-191fa736-61fc-4891-81a1-912a9dcfbff6" data-elfsight-app-lazy></div>
 
     <!--
       This HTML file is a template.
